--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/forum
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+## Hibernate
+##spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
