--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,3 +6,4 @@ log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %5p %c:%M:%L - %m%n
 log4j.logger.org.hibernate = WARN
 log4j.logger.org.springframework = WARN
 log4j.logger._org.springframework = WARN
+log4j.logger.com.zaxxer.hikari = WARN
