--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 ## Hibernate
-##spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
