--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,10 +2,10 @@
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 ##DATABASE
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/forum
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:hsqldb:mem:forum;sql.enforce_size=false
+spring.datasource.username=test
+spring.datasource.password=
+spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 ## Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
