--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,21 @@
       <artifactId>commons-dbcp2</artifactId>
       <version>2.7.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <artifactId>logback-classic</artifactId>
+          <groupId>ch.qos.logback</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>log4j-over-slf4j</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
+      <version>3.6.2</version>
+    </dependency>
     <!--SERVLET-->
     <dependency>
       <groupId>javax.servlet</groupId>
