--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,3 +7,4 @@ log4j.logger.org.hibernate = WARN
 log4j.logger.org.springframework = WARN
 log4j.logger._org.springframework = WARN
 log4j.logger.com.zaxxer.hikari = WARN
+log4j.logger.liquibase = WARN
